# mmgig

./: .gitignore  CMakeLists.txt  README.md
algo/: mmg_wrapper.cpp  mmg_wrapper.h
commands/: mesh_grobmmgcalls_commands.cpp  mesh_grobmmgcalls_commands.h
common/: common.h  mmgig_common.cpp
